[gd_scene load_steps=26 format=3 uid="uid://bk33wd0o4g3tt"]

[ext_resource type="Script" uid="uid://bpte7e61edqo1" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://gnxrrunjxilc" path="res://art/characters/attacks.png" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://pvb0ctsiwfyx" path="res://art/characters/luffy.png" id="3_qhqgy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_dqkch")
region = Rect2(63, 62, 63, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(64, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_dqkch")
region = Rect2(128, 0, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("3_qhqgy")
region = Rect2(64, 0, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_dqkch")
region = Rect2(64, 124, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("3_qhqgy")
region = Rect2(64, 124, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("3_qhqgy")
region = Rect2(67, 124, 67, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_qhqgy")
region = Rect2(67, 186, 67, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(67, 0, 67, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(67, 62, 67, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_qhqgy")
region = Rect2(64, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("3_qhqgy")
region = Rect2(64, 0, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("3_qhqgy")
region = Rect2(64, 124, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(128, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 0, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("3_qhqgy")
region = Rect2(128, 0, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 124, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("3_qhqgy")
region = Rect2(128, 124, 64, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_0eou4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}],
"loop": true,
"name": &"attack_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": true,
"name": &"attack_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": true,
"name": &"attack_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qhqgy"]
radius = 8.0
height = 18.0

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(2, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_0eou4")
animation = &"death"
offset = Vector2(0, -15)

[node name="hitbox_front" type="Area2D" parent="."]
position = Vector2(-3, 0)

[node name="hitbox_front" type="CollisionShape2D" parent="hitbox_front"]
position = Vector2(3, -5)
shape = SubResource("CapsuleShape2D_qhqgy")

[node name="hitbox_back" type="Area2D" parent="hitbox_front"]
position = Vector2(3, 0)

[node name="hitbox_back" type="CollisionShape2D" parent="hitbox_front/hitbox_back"]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_qhqgy")

[node name="hitbox_side" type="Area2D" parent="."]

[node name="hitbox_side" type="CollisionShape2D" parent="hitbox_side"]
position = Vector2(2, -6)
shape = SubResource("CapsuleShape2D_qhqgy")

[node name="attack_cooldown" type="Timer" parent="."]

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.8

[node name="world_camera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 400
limit_bottom = 224
limit_smoothed = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.15
drag_top_margin = 0.15
drag_right_margin = 0.15
drag_bottom_margin = 0.15

[node name="camp_camera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 670
limit_bottom = 320
limit_smoothed = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.15
drag_top_margin = 0.15
drag_right_margin = 0.15
drag_bottom_margin = 0.15

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.141043, 0.496214, 9.62615e-08, 1)
offset_left = -8.0
offset_top = 5.0
offset_right = 99.0
offset_bottom = 32.0
scale = Vector2(0.15, 0.15)
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="player_death" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="hitbox_front" to="." method="_on_hitbox_front_body_entered"]
[connection signal="body_exited" from="hitbox_front" to="." method="_on_hitbox_front_body_exited"]
[connection signal="body_entered" from="hitbox_front/hitbox_back" to="." method="_on_hitbox_back_body_entered"]
[connection signal="body_exited" from="hitbox_front/hitbox_back" to="." method="_on_hitbox_back_body_exited"]
[connection signal="body_entered" from="hitbox_side" to="." method="_on_hitbox_side_body_entered"]
[connection signal="body_exited" from="hitbox_side" to="." method="_on_hitbox_side_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="regin_timer" to="." method="_on_regin_timer_timeout"]
[connection signal="timeout" from="player_death" to="." method="_on_player_death_timeout"]
